Navbar correction + Homepage button CSS alignement

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -16,7 +16,7 @@
   background-color: #FCFCFC;
   opacity: 0.8;
   transition: background-color 0.3s ease;
-  border-radius: 10px;
+  border-radius: 2px;
   border: 1px solid #4F4F4F;
   &:hover {
     color: #FCFCFC;
